--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/springStudy?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=springuser
-spring.datasource.password=springuser
+#spring.datasource.url=jdbc:mariadb://localhost:3306/springstudy
+#spring.datasource.username=springuser
+#spring.datasource.password=springuser
+spring.datasource.url=jdbc:mariadb://econg.cuvca5zyxjf4.ap-northeast-2.rds.amazonaws.com:3306/econg
+spring.datasource.username=oasis
+spring.datasource.password=hello1234!hello
 
 #update the schema with the given values.
 spring.jpa.hibernate.ddl-auto=update
