--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client:2.7.4'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+    implementation 'org.apache.httpcomponents:httpclient:4.5.7'
 
 }
 
